frontend/test/should_fail/external_filter_001.grg
rule test1
{
    replace {
		exec(test2\f1);
    }
} \ f1

rule test2
{
	modify {
	}
}

